# lwoms

./: .dockerignore  .env.example  .gitignore  README.md  bash_engine.py  claude_desktop_config.example.json  curl.py  curl_engine.py  dns_engine.py  mcp_tools.py  netcat.py  nmap_engine.py  pyproject.toml  recon-agent-PROJECT-BRIEF.md  requirements.txt  server.py  telnet_engine.py  tools.py
netcat_mcp/: Dockerfile  claude_desktop_config.example.json  curl.py  netcat.py
