[project]
name = "telnet-mcp"
version = "1.0.0"
description = "A small MCP server for telnet sessions and port/HTTP recon (nmap, curl)."
readme = "README.md"
requires-python = ">=3.11"  # mcpo requires >=3.11
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "mcpo>=0.0.20",
]

[project.scripts]
telnet-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat layout: the modules live at the repo root, not under a package dir.
include = ["server.py", "mcp_tools.py", "telnet_engine.py", "nmap_engine.py", "curl_engine.py"]
